[package]
name = "daec-handicap-lists"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.95"
clap = { version = "=4.5.50", features = ["derive"] }
csv = "=1.4.0"
headless_chrome = { version = "=1.0.15", default-features = false }
minijinja = "=2.7.0"
serde = { version = "=1.0.217", features = ["derive"] }
tempfile = "=3.16.0"
url = "=2.5.4"

[dev-dependencies]
insta = "=1.42.1"
